ELK Stage 5: Logstash config